--- a/index.html
+++ b/index.html
@@ -96,68 +96,68 @@
 	  <div class="row">
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
-			<button type="button" class="btn btn-success btn-circle btn-xl" data-toggle="modal" data-target="#arrival"><i class="fas fa-plane-arrival fa-4x" style="margin-top: -8px;"></i></button>
-			<h6 class="btn-circle_text text-center">Arrival</h6>
+			<button type="button" class="btn btn-success btn-circle btn-xl" data-toggle="modal" data-target="#arrival"><i class="fas fa-plane-arrival fa-4x" style="margin-top: -3px;"></i></button>
+			<h6 class="btn-circle_text text-center mx-auto">Arrival</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
-			<button type="button" class="btn btn-warning btn-circle btn-xl" data-toggle="modal" data-target="#self-checkin"><i class="fas fa-key fa-4x" style="margin-top: -8px;"></i></button>
-			<h6 class="btn-circle_text text-center">Self Check-In</h6>
+			<button type="button" class="btn btn-warning btn-circle btn-xl" data-toggle="modal" data-target="#self-checkin"><i class="fas fa-key fa-4x" style="margin-top: -3px;"></i></button>
+			<h6 class="btn-circle_text text-center mx-auto">Self Check-In</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
-			<button type="button" class="btn btn-danger btn-circle btn-xl" data-toggle="modal" data-target="#parking"><i class="fas fa-car fa-4x" style="margin-top: -8px;"></i></button>
-			<h6 class="btn-circle_text text-center">Parking</h6>
+			<button type="button" class="btn btn-danger btn-circle btn-xl" data-toggle="modal" data-target="#parking"><i class="fas fa-car fa-4x" style="margin-top: -3px;"></i></button>
+			<h6 class="btn-circle_text text-center mx-auto">Parking</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
 			<button type="button" class="btn btn-dark btn-circle btn-xl" data-toggle="modal" data-target="#house-manual"><i class="fas fa-file-alt fa-4x" style="margin-top: -3px;"></i></button>
-			<h6 class="btn-circle_text text-center">House Manual</h6>
+			<h6 class="btn-circle_text text-center mx-auto">House Manual</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
 			<button type="button" class="btn btn-primary btn-circle btn-xl" data-toggle="modal" data-target="#internet"><i class="fas fa-wifi fa-4x" style="margin-top: -3px;"></i></button>
-			<h6 class="btn-circle_text text-center">Internet</h6>
+			<h6 class="btn-circle_text text-center mx-auto">Internet</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
 			<button type="button" class="btn btn-info btn-circle btn-xl" data-toggle="modal" data-target="#house-rules"><i class="fas fa-scroll fa-4x"></i></button>
-			<h6 class="btn-circle_text text-center">House Rules</h6>
+			<h6 class="btn-circle_text text-center mx-auto">House Rules</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
 			<button type="button" class="btn btn-success btn-circle btn-xl" data-toggle="modal" data-target="#garbage-disposal"><i class="fas fa-trash-alt fa-4x"></i></button>
-			<h6 class="btn-circle_text text-center">Garbage Disposal</h6>
+			<h6 class="btn-circle_text text-center mx-auto">Garbage Disposal</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
 			<button type="button" class="btn btn-warning btn-circle btn-xl" data-toggle="modal" data-target="#restaurants"><i class="fas fa-utensils fa-4x"></i></button>
-			<h6 class="btn-circle_text text-center">Restaurants</h6>
+			<h6 class="btn-circle_text text-center mx-auto">Restaurants</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
 			<button type="button" class="btn btn-danger btn-circle btn-xl" data-toggle="modal" data-target="#attractions"><i class="fas fa-map-signs fa-4x"></i></button>
-			<h6 class="btn-circle_text text-center">Attractions</h6>
+			<h6 class="btn-circle_text text-center mx-auto">Attractions</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
 			<button type="button" class="btn btn-dark btn-circle btn-xl" data-toggle="modal" data-target="#activities"><i class="fas fa-check-square fa-4x" style="margin-top: -3px;"></i></button>
-			<h6 class="btn-circle_text text-center">Activities</h6>
+			<h6 class="btn-circle_text text-center mx-auto">Activities</h6>
 		  </div>
 		</div>
 		<div class="col-6 col-md-3">
 		  <div class="card-body text-center"> 
 			<button type="button" class="btn btn-primary btn-circle btn-xl" data-toggle="modal" data-target="#check-inout"><i class="fas fa-shoe-prints fa-rotate-270 fa-4x"></i></button>
-			<h6 class="btn-circle_text text-center">Check-In/Out</h6>
+			<h6 class="btn-circle_text text-center mx-auto">Check-In/Out</h6>
 		  </div>
 		</div>
 	  </div>
