--- a/index.html
+++ b/index.html
@@ -34,20 +34,18 @@
         <span class="w-100"></span>
         <img class="text-center" src="./assets/logo.png" />
         <span class="w-100">
-			<a href="tel:604-757-4178">
-				<button class="navbar-toggler" style="float: right; height: 100%;">
-				  <i class="fas fa-phone fa-2x text__address"></i>
-				</button>
-			</a>
+			<button class="navbar-toggler" style="float: right; height: 100%" data-toggle="modal" data-target="#emergency">
+			  <i style="color: #dc3545;" class="fas fa-phone fa-2x text__address"></i>
+			</button>
 		</span>
     </div>
     <span class="w-100">
 	<div class="collapse navbar-collapse">
 		<ul class="navbar-nav ml-auto">
 		  <li class="nav-item">
-			<a class="nav-link" href="tel:604-757-4178">
-				<i class="fas fa-phone fa-2x text__address"></i>
-			</a>
+			<button class="nav-link btn btn-danger" style="background-color: #0b264a" data-toggle="modal" data-target="#emergency">
+				<i style="color: #dc3545;" class="fas fa-phone fa-2x text__address"></i>
+			</button>
 		  </li>
 		</ul>
 	</div>
@@ -430,7 +428,7 @@
 		</b>
 		<br>
 		<br>
-		<img class="figure-img" width="50%" src="http://restavio.vancitystr.com/assets/img/localbeaches.jpg">
+		<img class="img-fluid" src="http://restavio.vancitystr.com/assets/img/localbeaches.jpg">
 		<br>
 
 		<b>(2.) Local beaches 
@@ -606,6 +604,32 @@
 			<br>
 			Your host
 		</p>
+		<!-- EDIT HERE -->
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" style="background-color: #dc3545" id="emergency" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Emergency Phone</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body text-center">
+		<!-- EDIT HERE -->
+		<h3><b>Are you sure you want to call the <u>emergency</u> phone support?</b></h3>
+		<br/>
+		It should only be called in the event of an emergency.
+		<br/>
+		<br/>
+		Otherwise, please contact us through our online chat support.
+		<br/>
+		<br/>
+		<a href="tel:604-757-4178" class="btn btn-danger btn-round">Dial Emergency Phone  <i class="fas fa-phone text__address"></i></a>
 		<!-- EDIT HERE -->
       </div>
     </div>
