--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span class="w-100"></span>
         <img class="text-center" src="./assets/logo.png" />
         <span class="w-100">
-			<button class="navbar-toggler" style="float: right; height: 100%" data-toggle="modal" data-target="#emergency">
+			<button class="navbar-toggler" style="float: right; height: 100%; border: 1px solid #dc3545;" data-toggle="modal" data-target="#emergency">
 			  <i style="color: #dc3545;" class="fas fa-phone fa-2x text__address"></i>
 			</button>
 		</span>
